NetBSD Problem Report #48692

From www@NetBSD.org  Mon Mar 31 08:43:32 2014
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1 with cipher ECDHE-RSA-AES256-SHA (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 9BD79A5812
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 31 Mar 2014 08:43:32 +0000 (UTC)
Message-Id: <20140331084331.743EEA5813@mollari.NetBSD.org>
Date: Mon, 31 Mar 2014 08:43:31 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Missplaced paranthesis in bin/ed gbl.c and main.c
X-Send-Pr-Version: www-1.0

>Number:         48692
>Category:       bin
>Synopsis:       Missplaced paranthesis in bin/ed gbl.c and main.c
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Mar 31 08:45:00 +0000 2014
>Closed-Date:    Wed Apr 02 00:31:33 +0000 2014
>Last-Modified:  Wed Apr 02 00:31:33 +0000 2014
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Error found by cppcheck.
>How-To-Repeat:

>Fix:
diff -u -p -r1.7 glbl.c
--- bin/ed/glbl.c	23 Mar 2014 05:06:42 -0000	1.7
+++ bin/ed/glbl.c	31 Mar 2014 07:58:34 -0000
@@ -137,7 +137,7 @@ exec_global(int interact, int gflag)
 			if ((status = extract_addr_range()) < 0 ||
 			    (status = exec_command()) < 0 ||
 			    (status > 0 && (status = display_lines(
-			    current_addr, current_addr, status))) < 0)
+			    current_addr, current_addr, status)) < 0))
 				return status;
 	}
 	return 0;
===================================================================
diff -u -p -r1.26 main.c
--- bin/ed/main.c	23 Mar 2014 05:06:42 -0000	1.26
+++ bin/ed/main.c	31 Mar 2014 07:58:34 -0000
@@ -226,7 +226,7 @@ top:
 		    (status = exec_command()) >= 0)
 			if (!status || (status &&
 			    (status = display_lines(current_addr, current_addr,
-			        status))) >= 0)
+			        status)) >= 0))
 				continue;
 		switch (status) {
 		case EOF:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48692 CVS commit: src/bin/ed
Date: Mon, 31 Mar 2014 08:55:47 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Mon Mar 31 12:55:47 UTC 2014

 Modified Files:
 	src/bin/ed: glbl.c main.c

 Log Message:
 PR/48692: Henning Petersen: Missplaced paranthesis in bin/ed gbl.c and main.c


 To generate a diff of this commit:
 cvs rdiff -u -r1.7 -r1.8 src/bin/ed/glbl.c
 cvs rdiff -u -r1.26 -r1.27 src/bin/ed/main.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Wed, 02 Apr 2014 00:31:33 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.