PR/48692: Henning Petersen: Missplaced paranthesis in bin/ed gbl.c and main.c